upd11: add new user handler/ upd env
